python-interpreter/pythonService.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-interpreter-service
spec:
  selector:
    app: python-interpreter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
