python-interpreter/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-interpreter-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: python.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-interpreter-service
                port:
                  number: 80
